<resources>
    <string name="app_name">Airbyte</string>
    <string name="airbyte">Airbyte Broadband</string>
    <string name="verifty_num_txt">Verify your number</string>
    <string name="verify_code_txt">Enter the 6-digit Verification Code sent to</string>
    <string name="mobile_num_txt">Enter your mobile number</string>
    <string name="tv_send_code">We will send a 6-digit Verification Code to this mobile number</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="verify_otp">Verify</string>
    <string name="phone">834283388</string>
    <string name="change_number">Change number?</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="complaint">Complaint</string>
    <string name="problem">Problem</string>
    <string name="collect_amount_request">Collect Amount request</string>
    <string name="send_pay_request">Send pay request</string>
    <string name="pay_online">Pay Online</string>
    <string name="pay">Pay</string>
    <string name="payee_name">Payee Name :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_error">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="customer_id">Customer ID</string>


</resources>
