<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/phone_verification_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_key"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_key" />

        <TextView
            android:id="@+id/tv_verify_phone"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_key"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/verifty_num_txt"
            android:textColor="#ff000000"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/verify_msg"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_verify_phone"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_light"
            android:layout_centerHorizontal="true"
             android:text="@string/verify_code_txt"
            android:textColor="#ff000000"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_phone_number"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_msg"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/phone"
            android:layout_centerHorizontal="true"
             android:textColor="#ff000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/over_sms"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_msg"
              android:fontFamily="@font/roboto_light"
            android:text="over sms"
            android:layout_marginTop="@dimen/_1sdp"
             android:layout_marginStart="@dimen/_5sdp"
            android:layout_toRightOf="@id/tv_phone_number"
              android:textColor="#ff000000"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_change_number"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/over_sms"
            android:layout_alignStart="@id/tv_phone_number"
             android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/change_number"
            android:textColor="@color/light_blue" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/otp_view_layout"
         android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/phone_verification_layout"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/background_mobile_number_field"
        android:gravity="center">

        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
             style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:cursorVisible="true"
            android:hint="*"
            android:inputType="phone"
            android:padding="@dimen/_4sdp"
            android:textColor="#ff000000"
            android:textSize="18.0sp"
            app:cursorColor="@color/splash_background"
            app:cursorWidth="1.0dip"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="@dimen/_20sdp"
            app:itemRadius="1.0dip"
            app:itemSpacing="3.0dip"
            app:itemWidth="20.0dip"
            app:lineColor="@color/colorPrimaryDark"
            app:lineWidth="2.0dip"
            app:viewType="line" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_resend_code"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_view_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/resend_verification_code"
        android:textColor="@color/light_blue" />

    <com.agrawalsuneet.dotsloader.loaders.TashieLoader
        android:id="@+id/pb_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tashieloader_animDelay="200"
        app:tashieloader_animDur="100"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/otp_view_layout"
           app:tashieloader_dotsColor="@color/light_blue"
        app:tashieloader_dotsDist="5dp"
          app:tashieloader_dotsRadius="5dp"
        app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
        app:tashieloader_noOfDots="4" />



    <Button
        android:id="@+id/btn_verify_otp"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_blue"
         android:text="@string/verify_otp"
        android:clickable="false"
        android:textColor="#ffffffff" />

    <com.agrawalsuneet.dotsloader.loaders.TashieLoader
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tashieloader_animDelay="200"
        app:tashieloader_animDur="100"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
         app:tashieloader_dotsColor="@color/light_blue"
        app:tashieloader_dotsDist="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        app:tashieloader_dotsRadius="5dp"
        app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
        app:tashieloader_noOfDots="4" />


</RelativeLayout>